# gl3w-Template

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  run.sh
cmake_modules/: FindGLM.cmake
code/: CMakeLists.txt  main.cpp
code/Application/headers/: Application.h  Camera.h  Model.h  Scene.h  ShaderGenerator.h  ShaderProgram.h
code/Application/src/: Application.cpp  Camera.cpp  Model.cpp  Scene.cpp  ShaderGenerator.cpp  ShaderProgram.cpp
code/Connector/headers/: ApplicationInterface.h  Context.h  GameObject.h  ImguiConnect.h
code/Connector/src/: Context.cpp  ImguiConnect.cpp
code/Core/headers/: App.h  AppGui.h  CADMesh.h  FlatMesh.h  Hanbei.h  HanbeiGui.h  Mesh.h  PointCloud.h
code/Core/src/: App.cpp  AppGui.cpp  CADMesh.cpp  FlatMesh.cpp  Hanbei.cpp  HanbeiGui.cpp
code/Shaders/: default.frag  default.vert
code/headers/: Application.h  ApplicationInterface.h  GameObject.h  ImguiConnect.h  ImguiInterface.h
code/src/: ImguiConnect.cpp
libs/: CMakeLists.txt
models/: bunny.ply
